--- a/color.html
+++ b/color.html
@@ -23,7 +23,7 @@
 	<h1>Ultimate Guide To Choosing Colors for Web Design</h1>
 	<h3>Choosing colors is an important part of the web design process that can make or break the final result. In this guide, we'll review color theory and psychology fundamentals and lay out a step-by-step process for creating color palettes for websites.</h3>
 	<address>Stephanie Corrigan</address>
-<img src="Images/colour-wheel-1734690_1280.jpg" width="750" height="550" alt="image showing the color wheel"/>
+<img src="./Images/colour-wheel-1734690_1280.jpg" width="750" height="550" alt="image showing the color wheel"/>
   <figcaption>Photo by <a href="https://pixabay.com/illustrations/colour-wheel-pattern-color-wheel-1734690/">TheDigitalArtist</a></figcaption>
 	</header>
 	
@@ -111,3 +111,4 @@
 	</footer>
 </body>
 </html>
+
