--- a/principles.html
+++ b/principles.html
@@ -80,7 +80,7 @@
 	<h2>9. Repetition</h2>
 	<p class= "leftimage">
 	<figure>
-		<img src="Images/pattern-9420747_1280.png" width="300" height="270" alt="photo illustrating an example of repetition"/>
+		<img src="./Images/pattern-9420747_1280.png" width="300" height="270" alt="photo illustrating an example of repetition"/>
 	  <figcaption>Image by <a href="https://pixabay.com/vectors/pattern-seamless-background-9420747/">MissKaLem</a></figcaption>
 	</figure>
 	<p>Repetition refers to using the same or similar elements throughout your design, either in regular or irregular patterns. It’s used to reinforce certain elements while also providing a sense of unity and continuity to your design. Repetition can be used to create rhythm, which helps move users through your designs.</p>
@@ -108,3 +108,4 @@
 	</footer>
 </body>
 </html>
+
